feat: add key dialog ready

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Cryptex</string>
     <string name="logo_name">Cryptex</string>
+    <string name="addKey">Add Key</string>
 </resources>
