--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Cryptex</string>
     <string name="logo_name">Cryptex</string>
     <string name="addKey">Add Key</string>
+    <string name="chooseReceiver">Choose Receiver</string>
+    <string name="importReceiver">Import</string>
+    <string name="contact">Contact</string>
+    <string name="noneReceiver">None</string>
+    <string name="addContact">Add Contact</string>
+    <string name="defaultContactIconCircle">Default Contact Icon</string>
 </resources>
