feat: done button in top bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="encryptReceiverTitle">Following contact can decrypt your message:</string>
     <string name="encryptNoReceiverTitle">No receiver is selected. Anyone can decrypt your message.</string>
     <string name="inputTextPlaceHolder">Text you want to encrypt</string>
+    <string name="done">Done</string>
 </resources>
