--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,13 @@
     <string name="encryptWaiting">Please wait...</string>
     <string name="unknownError">Something went wrong</string>
     <string name="downloadedTo">Downloaded to %1$s</string>
+    <string name="outputFormat">Output Format</string>
+    <string name="lipsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
+    <string name="copy">Copy</string>
+    <string name="shareImgWarningTitle">Share the image directly?</string>
+    <string name="shareImgWarningContent">Most SNS apps will lossy compress your image, which may break the cipher message and cannot be decrypted. If you know what you are doing, continue; Otherwise, press \"Download\" and send the original image from your favorite SNS app.</string>
+    <string-array name="mediaTypes">
+        <item>Text</item>
+        <item>Image</item>
+    </string-array>
 </resources>
