--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="encryptOutputShareTo">You can share this encrypted message to %1$s.</string>
     <string name="encryptOutputShareAny">Anyone can read the shared message.</string>
     <string name="download">Download</string>
-    <string name="encryptWaiting">Please wait...</string>
+    <string name="wait">Please wait...</string>
     <string name="unknownError">Something went wrong</string>
     <string name="downloadedTo">Downloaded to %1$s</string>
     <string name="outputFormat">Output Format</string>
@@ -35,6 +35,13 @@
     <string name="login">Log in</string>
     <string name="myqr">My QR Code</string>
     <string name="myIcon">My Account Icon</string>
+    <string name="signup">Sign up</string>
+    <string name="usernameRequirement">Should contain 3~20 characters</string>
+    <string name="passwordRequirement">Should contain 1~32 characters</string>
+    <string name="badAccountPassword">Account does not exist or password does not match</string>
+    <string name="logging">Logging in</string>
+    <string name="hidePassword">Hide Password</string>
+    <string name="showPassword">Show Password</string>
     <string-array name="mediaTypes">
         <item>Text</item>
         <item>Image</item>
