--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,12 @@
     <string name="removeContactWarningTitle">Remove friend \"%1$s\"?</string>
     <string name="removeContactWarningContent">You will not be able to send new messages to each other anymore. Past message may still be decrypted.</string>
     <string name="noAccount">Any user</string>
+    <string name="contacts">Contacts</string>
+    <string name="selectContact">Select a contact</string>
+    <string name="encrypt">Encrypt</string>
+    <string name="myKeys">My Keys</string>
+    <string name="inbox">Inbox</string>
+    <string name="newFriend">New Friend</string>
     <string-array name="mediaTypes">
         <item>Text</item>
         <item>Image</item>
