feat: #4; upgrade: material3 to 1.1.1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,8 @@
     <string name="github">Github</string>
     <string name="teamName">Pentagram</string>
     <string name="appVersion">Ver 0.1</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
     <string-array name="mediaTypes">
         <item>Text</item>
         <item>Image</item>
